# Deep-Learning-for-Time-Series-Data-Cookbook

./: .gitignore  main.py  pyproject.toml  requirements.txt
Chapter_1/: 1.10_resampling_mv.py  1.11_correlation.py  1.1_loading_timeseries.py  1.2_visualizing_timeseries.py  1.3_irregular_resampling.py  1.3_resampling.py  1.4_missing_values.py  1.5_decomposition.py  1.6_autocorrelation.py  1.7_stationarity.py  1.8_variance.py  1.9_multivariate_timeseries.py
Chapter_2/: 2.5_building_simple_nn_pytorch.py  2.6_training_feed_forward_neural_network.py  2.7_training_a_recurrent_neural_network.py  2.8_training_an_LSTM_neural_network.py  2.9_training_cnn.py  nb_1_simple_nn.ipynb  nb_2_simple_nn_with_pytorch.ipynb  nb_3_rnn.ipynb  nb_4_lstm.ipynb  nb_5_cnn.ipynb
Chapter_3/: 3.10_handling_trend.py  3.11_seasonality_dummies_and_fourier.py  3.12_seasonality_differencing.py  3.13_seasonality_decomposition.py  3.14_handling_nonconstant_var.py  3.1_simple_forecasting_models.py  3.2_univariate_forecasting_ARIMA.py  3.3_preparing_time_series_supervised_learning.py  3.4_univariate_forecasting_feedforward_nn.py  3.5_univariate_forecasting_LSTM_nn.py  3.6_univariate_forecasting_GRU_nn.py  3.7_univariate_forecasting_stacking_LSTM.py  3.8_univariate_forecasting_combining_LSTM_multiple_fully_connected_layers.py  3.9_univariate_forecasting_CNN.py  nb_2_feedforward_nn.ipynb  nb_3_lstm.ipynb  nb_4_gru.ipynb  nb_5_stacked_lstm.ipynb  nb_6_hybrid_lstm.ipynb  nb_7_cnn.ipynb  nb_8_trend_lstm.ipynb  nb_9_seasonality.ipynb
Chapter_4/: 4.1_preparing_mv_timeseries.py  4.2_linear_regression.py  (+9 more)
(+29 files in other folders)
