[project]
name = "ts-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gluonts>=0.16.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "lightning>=2.6.0",
    "llvmlite>=0.46.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pytorch-forecasting>=1.5.0",
    "ray[data,serve,train,tune]>=2.53.0",
    "scikit-learn==1.7.2",
    "scipy>=1.16.3",
    "sktime==0.40.1",
    "statsmodels>=0.14.6",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
